ds-328: fix page header cta text alignment

--- a/packages/components/bolt-page-header/src/_page-header-mobile.scss
+++ b/packages/components/bolt-page-header/src/_page-header-mobile.scss
@@ -321,7 +321,7 @@
       transform: translate3d(0, 0, 0);
     }
 
-    > * {
+    > .e-bolt-button {
       display: grid;
       place-items: center;
       border-radius: 0;
